[gd_scene load_steps=8 format=3 uid="uid://cgll3bvpolsum"]

[ext_resource type="Script" path="res://scripts/ui/console.gd" id="1_hadmd"]
[ext_resource type="FontFile" uid="uid://cj3pwu1j055wh" path="res://graphics/sprites/ui/console.ttf" id="2_btgok"]
[ext_resource type="Texture2D" uid="uid://ckljr38wkg63m" path="res://graphics/sprites/ui/console_bg.png" id="2_r6dau"]
[ext_resource type="Script" path="res://scripts/ui/debughud.gd" id="4_u2r7x"]

[sub_resource type="LabelSettings" id="LabelSettings_7mb10"]
font = ExtResource("2_btgok")
font_size = 8
font_color = Color(1, 0, 0, 1)
shadow_color = Color(0.282353, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yojio"]
bg_color = Color(0.168627, 0.156863, 0.168627, 0.894118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2wah"]
bg_color = Color(0.219608, 0.207843, 0.223529, 0.815686)

[node name="Console" type="Window" node_paths=PackedStringArray("console_input", "console_output")]
process_mode = 3
title = "Openscop - Developer Menu"
initial_position = 5
size = Vector2i(320, 240)
visible = false
content_scale_size = Vector2i(320, 240)
content_scale_mode = 2
content_scale_aspect = 4
script = ExtResource("1_hadmd")
console_input = NodePath("ConsoleContainer/Input")
console_output = NodePath("ConsoleContainer/Background/Output")

[node name="ConsoleBackground" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_r6dau")

[node name="DebugHud" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("4_u2r7x")

[node name="PlayerPos" type="Label" parent="DebugHud"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Position:
DIR:"
label_settings = SubResource("LabelSettings_7mb10")
text_direction = 1

[node name="PlayerVel" type="Label" parent="DebugHud"]
layout_mode = 0
offset_top = 35.0
offset_right = 68.0
offset_bottom = 54.0
text = "Velocity:"
label_settings = SubResource("LabelSettings_7mb10")
text_direction = 1

[node name="ConsoleContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="ConsoleContainer"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.708
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.184314, 0.203922, 0.913725)

[node name="Output" type="RichTextLabel" parent="ConsoleContainer/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_btgok")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
scroll_active = false
scroll_following = true

[node name="Input" type="LineEdit" parent="ConsoleContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.19
offset_bottom = -0.190002
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_btgok")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_yojio")
theme_override_styles/focus = SubResource("StyleBoxFlat_n2wah")
placeholder_text = "type a command..."
caret_blink = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_submitted" from="ConsoleContainer/Input" to="." method="_on_input_text_submitted"]
